--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -13,6 +13,10 @@ a {
   cursor: pointer;
 }
 
+.margin {
+  margin: 10px;
+}
+
 .input {
   background-color:black; color:white; border-color:white; border-radius:5px; padding:5px; outline:none;
 }
