--- a/views/index.pug
+++ b/views/index.pug
@@ -17,18 +17,18 @@ html
             div(style="display: flex; padding: 8px;"  onclick="setResearchTarget('defense')")
                 div(style="padding-right: 4px;") Defense
                 div(id="defenseValue")
-            div(style="display: flex; padding: 8px;"  onclick="setResearchTarget('terraforming')")
-                div(style="padding-right: 4px;") Terraforming
-                div(id="terraformingValue")
+            //div(style="display: flex; padding: 8px;"  onclick="setResearchTarget('terraforming')")
+            //    div(style="padding-right: 4px;") Terraforming
+            //    div(id="terraformingValue")
             div(style="display: flex; padding: 8px;" onclick="setResearchTarget('manufacturing')")
                 div(style="padding-right: 4px;") Manufacturing
                 div(id="manufacturingValue")
-            div(style="display: flex; padding: 8px;"  onclick="setResearchTarget('range')")
-                div(style="padding-right: 4px;") Range
-                div(id="rangeValue")
-            div(style="display: flex; padding: 8px;" onclick="setResearchTarget('scanning')")
-                div(style="padding-right: 4px;") Scanning
-                div(id="scanningValue")
+            //div(style="display: flex; padding: 8px;"  onclick="setResearchTarget('range')")
+            //    div(style="padding-right: 4px;") Range
+            //    div(id="rangeValue")
+            //div(style="display: flex; padding: 8px;" onclick="setResearchTarget('scanning')")
+            //    div(style="padding-right: 4px;") Scanning
+            //    div(id="scanningValue")
 
 div(id="playerData" style="color: white; font-family: monospace;")
 canvas(id="domCanvas" width="1100" height="650" style="border:1px solid #000000;")
@@ -386,10 +386,10 @@ script.
         document.getElementById("creditsValue").innerText = getThisPlayer().credits;
         document.getElementById("weaponsValue").innerText = getThisPlayer().weapons;
         document.getElementById("defenseValue").innerText = getThisPlayer().defense;
-        document.getElementById("terraformingValue").innerText = getThisPlayer().terraforming;
+        // document.getElementById("terraformingValue").innerText = getThisPlayer().terraforming;
         document.getElementById("manufacturingValue").innerText = getThisPlayer().manufacturing;
-        document.getElementById("rangeValue").innerText = getThisPlayer().range;
-        document.getElementById("scanningValue").innerText = getThisPlayer().scanning;
+        // document.getElementById("rangeValue").innerText = getThisPlayer().range;
+        // document.getElementById("scanningValue").innerText = getThisPlayer().scanning;
 
         infoPanel.style.display = "block";
         infoPanel.style.color = getPlayerColor(getThisPlayer().ordinal);
