--- a/views/index.pug
+++ b/views/index.pug
@@ -63,7 +63,7 @@ script.
                 showGameSelectDialog(JSON.parse(getGamesRequest.responseText));
             }
         };
-        getGamesRequest.open("GET", "http://localhost:3000/getGames", true);
+        getGamesRequest.open("GET", "/getGames", true);
         getGamesRequest.setRequestHeader("Content-Type", "application/json; charset=utf-8");
         getGamesRequest.send();
     };
