--- a/views/index.pug
+++ b/views/index.pug
@@ -324,6 +324,8 @@ script.
         });
         selectedStarEconomy.addEventListener("click", function () {
             incrementEconomy(selectedStarName.value, selectedStarEconomy)
+            getThisPlayer().creditsPerTurn++;
+            document.getElementById("creditsPerTurn").innerText = " Credit per turn: " + getThisPlayer().creditsPerTurn;
         });
 
         selectedStarShips.addEventListener("click", function () {
