added simple titles to these buttons.

--- a/views/index.pug
+++ b/views/index.pug
@@ -292,15 +292,30 @@ script.
         selectedStarName.disabled = true;
         selectedStarName.type = "text";
         selectedStarName.value = map.MAP[i].id;
+        let selectedStarEconomyContainer = document.createElement('div');
         let selectedStarEconomy = document.createElement('button');
         selectedStarEconomy.type = "button";
         selectedStarEconomy.innerHTML = map.MAP[i].economy;
+        let selectedStarEconomyTitle = document.createElement('div');
+        selectedStarEconomyTitle.innerHTML = "Economy";
+        selectedStarEconomyContainer.appendChild(selectedStarEconomyTitle);
+        selectedStarEconomyContainer.appendChild(selectedStarEconomy);
+        let selectedStarIndustryContainer = document.createElement('div');
         let selectedStarIndustry = document.createElement('button');
         selectedStarIndustry.type = "button";
         selectedStarIndustry.innerHTML = map.MAP[i].industry;
+        let selectedStarIndustryTitle = document.createElement('div');
+        selectedStarIndustryTitle.innerHTML = "Industry";
+        selectedStarIndustryContainer.appendChild(selectedStarIndustryTitle);
+        selectedStarIndustryContainer.appendChild(selectedStarIndustry);
+        let selectedStarScienceContainer = document.createElement('div');
         let selectedStarScience = document.createElement('button');
         selectedStarScience.type = "button";
         selectedStarScience.innerHTML = map.MAP[i].science;
+        let selectedStarScienceTitle = document.createElement('div');
+        selectedStarScienceTitle.innerHTML = "Science";
+        selectedStarScienceContainer.appendChild(selectedStarScienceTitle);
+        selectedStarScienceContainer.appendChild(selectedStarScience);
         let selectedStarShips = document.createElement('button');
         selectedStarShips.id = "selectedStarShips";
         selectedStarShips.type = "button";
@@ -309,9 +324,9 @@ script.
         let selectedStar = document.createElement('div');
         selectedStar.style.display = "flex";
         selectionPanel.appendChild(selectedStarName);
-        selectedStar.appendChild(selectedStarEconomy);
-        selectedStar.appendChild(selectedStarIndustry);
-        selectedStar.appendChild(selectedStarScience);
+        selectedStar.appendChild(selectedStarEconomyContainer);
+        selectedStar.appendChild(selectedStarIndustryContainer);
+        selectedStar.appendChild(selectedStarScienceContainer);
         selectedStar.appendChild(selectedStarShips);
         selectionPanel.appendChild(selectedStar);
         selectedStarName.setAttribute("style", "width:94px");
